@@ -18,8 +18,16 @@ module ActiveRecord
       #
       #   # Same as above, just using explicit class references
       #   ActiveRecord::Base.observers = Cacher, GarbageCollector
+      #
+      # Note: Setting this does not instantiate the observers yet.  #instantiate_observers is
+      # called during startup, and before each development request.  
       def observers=(*observers)
         @observers = observers.flatten
+      end
+
+      # Gets the current observers.
+      def observers
+        @observers ||= []
       end
 
       # Instantiate the global ActiveRecord observers
